<?xml version="1.0"?>
<package>
  <name>teleop</name>
  <version>0.0.0</version>
  <description>Publishes keyboard commands as a string message</description>

  <maintainer email="j.j.m.lunenburg@tue.nl">Janno Lunenburg</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
